After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 658189 - Notification display timeout is ignored
Notification display timeout is ignored
Status: RESOLVED FIXED
Product: notification-daemon
Classification: Other
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: notification-daemon-maint
notification-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2011-09-04 18:14 UTC by Jakub Adam
Modified: 2015-04-14 16:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch for the bug (2.44 KB, patch)
2011-09-04 18:15 UTC, Jakub Adam
none Details | Review
A slightly more elegant patch for the current version in the Gnome FTP repository (0.7.6) (2.33 KB, patch)
2012-10-21 09:53 UTC, Jason Benjamin
none Details | Review

Description Jakub Adam 2011-09-04 18:14:15 UTC
Notification bubble is now always displayed for 5 seconds and this can't be changed with org.freedesktop.Notifications.Notify timeout method parameter because its value is ignored. This was broken probably after some bigger code rework, attached patch fixes the issue.
Comment 1 Jakub Adam 2011-09-04 18:15:44 UTC
Created attachment 195633 [details] [review]
patch for the bug
Comment 2 Marcin Szewczyk 2011-09-12 13:11:12 UTC
I would like to confirm that one. The patch seems reasonable as well.
Comment 3 André Klapper 2012-04-03 13:46:33 UTC
Mass-fixing incorrect assignee and QA contact scheme for notification-daemon so interested people can follow its development. (See 606364#c1 for ref.)
Comment 4 Jason Benjamin 2012-10-21 09:53:36 UTC
Created attachment 226918 [details] [review]
A slightly more elegant patch for the current version in the Gnome FTP repository (0.7.6)

Never used Bugzilla before.  So I didn't bother to check if there was a patch available already.  Additionally, I did not submit a patch based on current version in git.  Oh well.  Hope this is useful to someone.
Comment 5 Alberts Muktupāvels 2015-04-14 16:57:39 UTC
This problem has been fixed in the unstable development version. The fix will be available in the next major software release. You may need to upgrade your Linux distribution to obtain that newer version.