nd-bubble: fix timeout

Patch based on a patch by Jakub Adam.

https://bugzilla.gnome.org/show_bug.cgi?id=658189